ISIS-2053: fixes spacing of hidden buttons

--- a/core/viewer-wicket-ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-flatly.css
+++ b/core/viewer-wicket-ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-flatly.css
@@ -27,10 +27,6 @@
     background-color: #ecf0f1;
 }
 
-.list-inline > li {
-    padding-left: 0px;
-    padding-right: 0px;
-}
 
 .sidebar-panel :focus,
 h4.iconAndTitle a:focus,
