--- a/core/viewer-wicket-ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides.css
+++ b/core/viewer-wicket-ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides.css
@@ -1045,3 +1045,7 @@ h4.iconAndTitle a:focus {
 }
 
 
+.list-inline > li {
+    padding-left: 0px;
+    padding-right: 0px;
+}
